--- a/st.html
+++ b/st.html
@@ -12,7 +12,7 @@
 <hr>
 
 <p align="center">
-<img src="C:\Users\Praiseline Tatpati\OneDrive\Desktop\ef.jpg"
+<img src="https://github.com/Praiselinee/Form/blob/main/ef.jpg"
   width="400" height="250" border="4" title="BCA LOGO" >
 </p>
 
