--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <h1 style="border:black; border-wdth:2px; border-style:solid;"<b><i><center>  Students Registration Form </center></b> </i></h3>
 <hr>
 
-
+<p align="center">
+<img src="C:\Users\Praiseline Tatpati\OneDrive\Desktop/ef.jpg"
+  width="400" height="250" border="4" title="BCA LOGO" >
+</p>
 <h2 > </h2>
 
 <h5> <center>(please Fill in the information properly)</center></h5>
