--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <h1 style="border:black; border-wdth:2px; border-style:solid;"<b><i><center>  Students Registration Form </center></b> </i></h3>
 <hr>
 
+
+<h2 > </h2>
 <p align="center">
 <img src="C:\Users\Praiseline Tatpati\OneDrive\Desktop/ef.jpg"
   width="400" height="250" border="4" title="BCA LOGO" >
 </p>
-<h2 > </h2>
 
 <h5> <center>(please Fill in the information properly)</center></h5>
 <hr>
@@ -82,19 +83,19 @@ Select Semester: <br>
 <br>
 
 Division:  <br>
-<input type="radio" name="div" value="A1" required > A1
+<input type="radio" name="div1" value="A1" required > A1
 
 <br>
 
-<input type="radio" name="Division" value="A2" required > A2
+<input type="radio" name="div2" value="A2" required > A2
 
 <br>
 
-<input type="radio" name="Division" value="A3" required > A3
+<input type="radio" name="div3" value="A3" required > A3
 
 <br>
 
-<input type="radio" name="Division" value="A4" required > A4
+<input type="radio" name="div4" value="A4" required > A4
 
 <br>
 <br>
