--- a/index.html
+++ b/index.html
@@ -82,20 +82,15 @@ Select Semester: <br>
 <br>
 <br>
 
-Division:  <br>
-<input type="radio" name="div1" value="A1" required > A1
+Select Division: <br>
+<select name="div">
+<option  > Select Division </option>
+<option > A1 </option>
+<option> A2 </option>
+<option> A3 </option>
+<option> A4 </option>
 
-<br>
-
-<input type="radio" name="div2" value="A2" required > A2
-
-<br>
-
-<input type="radio" name="div3" value="A3" required > A3
-
-<br>
-
-<input type="radio" name="div4" value="A4" required > A4
+</select>
 
 <br>
 <br>
