--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <h2 > </h2>
 <p align="center">
-<img src="C:\Users\Praiseline Tatpati\OneDrive\Desktop/ef.jpg"
+<img src="C:\Users\Praiseline Tatpati\OneDrive\Desktop/image.jpg"
   width="400" height="250" border="4" title="BCA LOGO" >
 </p>
 
